...
            <TSCaptionText
              textStyles={{
                textAlign: "center",
                backgroundColor: theme.palette.IP_Label_bg,
              }}
            >
              Rest
            </TSCaptionText>
            <View style={{ flex: 1, flexDirection: "row" }}>
              <View style={{ flex: 1 }}>
                <Input
                  keyboardType="decimal-pad"
                  containerStyle={[
...
                testID={TestIDs.CreateWorkoutAddItemBtn.name()}
                btnStyles={{
                  backgroundColor: theme.palette.transparent,
                  borderColor: "#ffffff",
                  borderWidth: 1,
                }}
                text="Add Item"
              />
            </LinearGradient>
          )}
        </View>
      </View>
      <AlertModal
...
