...
                    testID={TestIDs.CreateRegularWorkoutBtn.name()}
                    btnStyles={{
                      backgroundColor: theme.palette.AWE_Blue,
                      padding: 4,
                    }}
                    textStyles={{ color: "black", fontWeight: "bold" }}
                    text="Standard"
                  />
                </View>
                <View style={{ width: "30%", padding: 6 }}>
                  <RegularButton
                    onPress={openCreateWorkoutScreenForReps.bind(this)}
                    btnStyles={{
                      backgroundColor: theme.palette.AWE_Red,
                      padding: 4,
                    }}
                    textStyles={{ color: "black", fontWeight: "bold" }}
                    text="Reps"
                  />
                </View>
              </View>

              <View
                style={{
...
                    onPress={openCreateWorkoutScreenForRounds.bind(this)}
                    btnStyles={{
                      backgroundColor: theme.palette.AWE_Yellow,
                      padding: 4,
                    }}
                    textStyles={{ color: "black", fontWeight: "bold" }}
                    text="Rounds"
                  />
                </View>
                <View style={{ width: "30%", padding: 6 }}>
                  <RegularButton
                    onPress={openCreateWorkoutScreenCreative.bind(this)}
                    btnStyles={{
                      backgroundColor: theme.palette.AWE_Green,
                      padding: 4,
                    }}
                    textStyles={{ color: "black", fontWeight: "bold" }}
                    text="Creative"
                  />
                </View>
              </View>
            </View>

            <View
...
                    backgroundColor: showCreate
                      ? theme.palette.gray
                      : theme.palette.AWE_Green,
                    paddingHorizontal: 12,
                    paddingVertical: 8,
                  }}
                  text={showCreate ? "X" : "Add Workout"}
                />
              </View>

              {workouts.length > 0 ? (
                <View style={{ marginHorizontal: 6 }}>
                  <RegularButton
...
                    btnStyles={{
                      backgroundColor: theme.palette.primary.main,
                      display: !showCreate ? "flex" : "none",
                      paddingHorizontal: 12,
                      paddingVertical: 8,
                    }}
                    text="Finish"
                  />
                </View>
              ) : (
                <></>
              )}
            </View>
...
