...
  Monday: [
    "Squat Day",
    "Squat",
    [
      ["Leg Press", 5, 15],
      ["Hamstring Curl", 5, 12],
      ["Plank", 5, { duration: 60 }],
      ["Chest Supported Rows", 5, 12],
    ],
  ],
  Tuesday: [
    "Bench Day",
    "Bench Press",
...
      ["Russian Twist", 3, 20],
    ],
  ],
  Wednesday: ["Conditioning Day A", null, [["Hill Sprints", 3, { reps: 10 }]]],
  Thursday: [
    "Deadlift Day",
    "Deadlift",
    [
      ["Good Morning", 5, 12],
      ["Hanging Leg Raises", 5, 15],
      ["Crunch", 3, 20],
      ["Leg Extension", 5, 12],
    ],
...
