...
              </TSTitleText>
            </View>

            <View style={{ flex: 5 }}>
              <View style={{ marginBottom: 15, height: 40 }}>
                <Input
                  placeholder="Title"
                  testID={TestIDs.WorkoutGroupTitleField.name()}
                  onChangeText={(t) => {
                    setTitle(limitTextLength(t, WorkoutGroupTitleLimit));
                    setTitleError("");
                  }}
                  value={title || ""}
...
                    />
                  }
                />
              </View>
              <View style={{ marginBottom: 15, height: 40 }}>
                <Input
                  placeholder="Caption"
                  testID={TestIDs.WorkoutGroupCaptionField.name()}
                  onChangeText={(t) =>
                    setCaption(limitTextLength(t, WorkoutGroupDescLimit))
                  }
                  value={caption || ""}
                  label="Caption"
...
