...
            tabBarIcon: ({ color }) => (
              <FontAwesome size={28} name="terminal" color={color} />
            ),
          }}
        /> */}
      <Tabs.Screen
        name="Profile"
        options={{
          title: "Profile",
          tabBarLabelStyle: {
            fontSize: FONTSIZE,
            fontWeight: "bold",
          },
...
