...
                <MediumText>{bodyText}</MediumText>
              </View>

              <View style={{ marginBottom: 50, flex: 9 }}>
                <View style={{ height: 60 }}>
                  <Input
                    placeholder="Penalty"
                    onChangeText={setText}
                    value={text}
                    label="Penalty"
                    autoCapitalize={AutoCaptilizeEnum.Sent}
                    multiline
                    containerStyle={{
...
                  }}
                  btnStyles={{
                    backgroundColor: theme.palette.AWE_Green,
                    justifyContent: "center",
                    paddingHorizontal: 24,
                  }}
                  text="Submit"
                />
              </View>
            </View>
          </View>
        </TouchableWithoutFeedback>
      </View>
...
