appId: com.killuhwhale.reptracker # This is an example app id. Replace it with your app id.
---
- launchApp

- tapOn: "Profile"
- tapOn:
    id: "ProfileEditUsernameBtn"

- tapOn:
    id: "ProfileEditUsernameField"

# - eraseText: 50
- longPressOn:
    id: "ProfileEditUsernameField"

- inputText: 'killuhwhale'

- tapOn:
    id: "ProfileEditUsernameBtn"

- launchApp

- tapOn: "Profile"

- assertVisible: "killuhwhale"